--- a/styleProducts.css
+++ b/styleProducts.css
@@ -1,4 +1,8 @@
-
+ a{
+  text-decoration: none;
+  color: black;
+  font-size: 1.2em;
+ }
  /*---------------------------tags geral para estilo dos banners de produtos---------------*/
  .carousel-products{
     margin: 0 auto;
