--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ruda:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Raleway:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ruda:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&display=swap');
 
 body {
   margin: 0 auto;
@@ -19,6 +20,9 @@ body {
   box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, 0.1);
 
 }
+a{
+  text-decoration: none;
+}
 
 .logo2 {
   display: none;
@@ -26,7 +30,7 @@ body {
 
 
 .logoo {
-  width: 9%;
+  width: 40%;
   margin-top: 3%;
   margin-left: 3%;
 }
@@ -74,7 +78,7 @@ body {
   justify-content: space-between;
   text-align: center;
   margin-top: 25px;
-  margin-right: 15px;
+  margin-right: 30px;
 
 }
 
@@ -84,9 +88,9 @@ body {
   background-color: #ffffff;
   border: none;
   color: #646464;
-  padding: 0.7rem 1rem;
+  padding: 0.9rem 1rem;
   border-radius: 30px;
-  width: 12em;
+  width: 13em;
   transition: all ease-in-out .5s;
   margin-right: -2rem;
 }
@@ -107,13 +111,14 @@ body {
 }
 
 .search__input:focus+.search__button {
-  background-color: #f0eeee;
+  background-color: #f0eeee00;
 }
 
 .search__button {
   border: none;
-  background-color: #ffffff;
+  background-color: #ffffff00;
   margin-top: .1em;
+
 }
 
 .search__button:hover {
@@ -122,8 +127,11 @@ body {
 
 .search__icon {
   height: 1.3em;
-  width: 1.0em;
-  fill: #000000b7;
+  width: 2.0em;
+  fill: #000000c0;
+margin: 40%;
+  
+  
 
 }
 
@@ -197,19 +205,7 @@ body {
 #carouselExample {
   margin-top: 5%;
 }
-a{
-  text-decoration: none;
-  color: black;
-}
-.real{
-  margin-left: 45%;
-}
-.price{
-  margin-left: 45%;
-}
-.descricoesProdutos{
-  margin: 0 auto;
-}
+
 .alinhar {
   display: flex;
   flex-direction: row;
@@ -223,6 +219,14 @@ a{
   border-radius: 50%;
   height: 40px;
   width: 40px;
+}
+
+.control-prev-produto {
+  margin-left: 8%;
+}
+
+.control-next-produto {
+  margin-right: 8%;
 }
 
 /*---------------------tags para estilo dos card de produtos da home-------------------*/
@@ -272,13 +276,6 @@ a{
 }
 
 
-.carousel-control-prev, .carousel-control-next{
-  margin-top: 10%;
-   background-color: #a8a8a8c0;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-}
 
 .text {
   max-width: 55px;
@@ -300,7 +297,7 @@ a{
 /*------------------------  Banner DE AVALIAÇÃO - HOME ---------------------------------------*/
 .avaliacao{
   margin: 0 auto;
-  margin-top: 2%;
+  margin-top: 6%;
   background-color: #e3dae4;
   width: 80%;
   display: flex;
@@ -308,12 +305,12 @@ a{
 }
 
 .todasAvaliacao{
-  padding: 2%;
+  padding: 4%;
 }
 .infoUsuario{
   width: 100%;
-  padding: 1%;
-  margin-top: 2%;
+  padding: 2%;
+  margin-top: 3%;
   background: #d0e9dd;
   color: rgb(0, 0, 0);
   border-radius: 20px;
@@ -321,9 +318,6 @@ a{
   font-family: 'Raleway', sans-serif;
   box-shadow: 15px 15px 30px #bebebe,
   -15px -15px 30px #9b9797;
-}
-.infoUsuario:hover{
-  scale: 1.1;
 }
 .tituloAvaliacao{
   padding: 2%;
@@ -355,20 +349,35 @@ a{
 .informacoesHome{
   display: flex;
   flex-direction: row;
+
+  text-align: center;
+
 }
 
 .bannerInfor1img {
+  padding-left: 28%;
   margin: 0 auto;
-  padding: 5%;
-  width: 850px;
-  height: 500px;
+  width: 800px;
+  height: 400px;
 }
 .bannerInfor2img {
+  padding-left: 25%;
+ 
   margin: 0 auto;
-  padding: 5%;
-  width: 850px;
-  height: 500px;
+  width: 800px;
+  height: 400px;
 }
+.bannerInfor1{
+  border: 2px solid black;
+
+}
+.bannerInfor2{
+  border: 2px solid black;
+
+}
+
+
+
 
 /*--------------------ESTILO DE PRODUTOS-------------*/
 .bannerfixo1{
@@ -381,8 +390,6 @@ a{
   width: 60%;
   height: 500px;
 }
-/*----------------------- CARD COM OS PRODUTOS -------------------------*/
-
 @media only screen and (max-width: 490px){
   #header{
     height: 100px;
@@ -391,15 +398,7 @@ a{
     display: flex;
     flex-direction: column;
   }
-  .card{
-    width:300px;
-    height: 150px;
-  }
-  .carousel-control-prev, .carousel-control-next{
-    margin-top: 30%;
-    height: 30px;
-    width: 30px;
-  }
+  
   .bannerInfor1img {
     width: 100%;
     height: 150px;
@@ -420,9 +419,7 @@ a{
     width: 80%;
     height: 120px;
   }
-.id{
-  display: none;
-}
+
 
   .avaliacao{
     margin: 0 auto;
@@ -715,6 +712,257 @@ footer {
 }
 
 
+
+
+
+/* ////////////////////////////////// Página do Produto Sozinho //////////////////////////////////////////////////////////////// */
+
+
+.produtoPage{
+ 
+  width: 30%;
+}
+.produtoPage2{
+  display: none;
+
+}
+.produto{
+  width: 100%;
+}
+.produto:hover{
+  transition: 1s;
+  width: 110%;
+}
+
+.ladoDireito{
+  margin-top: 2%;
+  /* border: 2px solid black; */
+  width: 70%;
+  margin-left: 5%;
+}
+.completoPage{
+  /* border: 2px solid black; */
+  display: flex;
+  margin-left: 10%;
+  width: 100%;
+}
+
+.produtoTexto{
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  font-size: 40px;
+
+}
+.corners { 
+  background: #f6f6f673;
+  height: 60px;
+  margin: 80px auto;
+  max-width: 200px;
+  position: relative;
+  width: 80%;
+  box-shadow: 0 1px 7px hsla(0, 0%, 0%, 0.2);
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  font-size: 25px;
+  margin-right: 65%;
+ 
+}
+
+/* Corner Effect */
+.corners:after,
+.corners:before {
+  background: #0297341f;
+  content: '';
+  height: 35px;
+  position: absolute;
+  top: -13px;
+  width: 60px;
+  box-shadow: 0 5px 10px -7px hsla(0, 0% ,0%, 0.5);
+}
+.corners:after {
+  left: -50px;
+  transform: rotate(-45deg);
+}
+.corners:before {
+  right: -50px;
+  transform: rotate(45deg);
+}
+.cent{
+  display: flex;
+  justify-content: center;
+ 
+}
+
+
+/*///////////////////////////////////////////////////////*/
+
+
+
+.input-groupP {
+  position: relative;
+}
+
+.inputP {
+  border: 3px solid #000;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+}
+
+.user-labelP {
+  position: absolute;
+  left: 15px;
+  color: #000;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 350ms;
+}
+
+.inputP:focus,
+inputP:valid {
+  outline: none;
+  --angle: 0deg;
+  border-bottom: 3px solid;
+  border-image: conic-gradient(from var(--angle), #2ae919, #2dad19, #70bf5f,#2ae919 , #9cf576) 1;
+  animation: 3s rotate9234 linear infinite;
+}
+
+@keyframes rotate9234 {
+  to {
+    --angle: 360deg;
+  }
+}
+
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.inputP:focus~label,
+input:valid~label {
+  transform: translateY(265%) scale(1);
+ 
+  padding: 0 .9em;
+  color: #f7efe5;
+}
+
+
+.cent3{
+ 
+  display: flex;
+  margin-left: 9%;
+ 
+}
+
+
+.textoT{
+  margin-left: 9%;
+  margin-top: 40%;
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  text-decoration: none;
+  color: #00AC7C;
+  font-size: 23px;
+}
+.textoT:hover{
+  color: #29da19;
+}
+
+
+
+
+
+
+button {
+  margin-left: 10%;
+  font-size: 18px;
+  color: #56b98bb0;
+  font-family: inherit;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+}
+
+button:focus,
+button:hover {
+  color: rgba(14, 179, 8, 0.719);
+}
+
+button:focus:after,
+button:hover:after {
+  width: 100%;
+  left: 0%;
+}
+
+button:after {
+  content: "";
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background-color: rgba(14, 179, 8, 0.719);
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
+}
+
+
+/* ////////////////////////////////////////////////// Fim Produtosss sozinho //////////////////////////////////////////////*/
+
+
+
+
+/* //////////////////////////////////////////////////////// Página Da Tabela /////////////////////////////////////////////////////*/
+
+table{
+  text-align: center;
+  width: 70%;
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  font-size: 25px;
+  box-shadow: 15px 15px 30px #555353,
+  -15px -15px 30px #8ae6a8;
+}
+.tabela{
+  margin-top: 10%;
+  margin-left: 29%;
+  
+}
+.tabela:hover {
+  transition: 1s;
+  transform: scale(1.05);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* //////////////////////////////////////////////////////// Página Da Tabela fim /////////////////////////////////////////////////////*/
+
+
+
+
 @media only screen and (max-width: 490px){
   /*------ RESPONSIVIDADE DA PAGINA SOBRE NOS------*/
   .container{
@@ -874,6 +1122,8 @@ footer {
   .logo2 {
     display: block;
     width: 30%;
+    margin-right: 33%;
+    margin-bottom: 3%;
 
   }
 
@@ -998,61 +1248,255 @@ footer {
     font-size: 16px;
 
   }
+  .informacoesHome{
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    border: 2px solid black;
+  
+  }
+  .bannerInfor1{
+    border: 2px solid black;
+
+  }
+  .bannerInfor2{
+    border: 2px solid black;
+
+  }
+
+  .bannerInfor2img {
+    
+    width: 100%;
+    display: none;
+  
+  }
+
+
+
+  
+
+
+
+
+  /* ////////////////////////////////// Página do Produto Sozinho //////////////////////////////////////////////////////////////// */
+
+
+.produtoPage{
+
+  display: none;
 
 }
-/*-------------responsividade tablets--------------------*/
-@media only screen and (min-width: 480px) and (max-width: 860px) {
+
+
+.produtoPage2{
+
+display: block;
+}
+
+.ladoDireito{
+
+ 
+  width: 100%;
+  margin-right: 20%;
+
+}
+.completoPage{
+  /* border: 2px solid black; */
+  display: flex;
+  width: 100%;
+}
+
+.produtoTexto{
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  font-size: 25px;
+
+}
+.corners { 
+  background: #f6f6f673;
+  height: 40px;
+  margin: 50px auto;
+  max-width: 200px;
+  position: relative;
+  width: 50%;
+  box-shadow: 0 1px 7px hsla(0, 0%, 0%, 0.2);
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  font-size: 17px;
+}
+
+/* Corner Effect */
+.corners:after,
+.corners:before {
+  background: #0297341f;
+  content: '';
+  height: 30px;
+  position: absolute;
+  top: -7px;
+  width: 55px;
+  box-shadow: 0 5px 10px -7px hsla(0, 0% ,0%, 0.5);
+}
+.corners:after {
+  left: -50px;
+  transform: rotate(-45deg);
+}
+.corners:before {
+  right: -50px;
+  transform: rotate(45deg);
+}
+.cent{
+  display: flex;
+  justify-content: center;
   
-/* -----------------  Banner VERDE DE INFORMAÇÕES - HOME */
-.informacoesHome{
+ 
+}
+
+
+/*///////////////////////////////////////////////////////*/
+
+
+
+.input-groupP {
+  position: relative;
+}
+
+.inputP {
+  border: 3px solid #000;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+}
+
+.user-labelP {
+  position: absolute;
+  left: 15px;
+  color: #000;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 350ms;
+}
+
+.inputP:focus,
+inputP:valid {
+  outline: none;
+  --angle: 0deg;
+  border-bottom: 3px solid;
+  border-image: conic-gradient(from var(--angle), #2ae919, #2dad19, #70bf5f,#2ae919 , #9cf576) 1;
+  animation: 3s rotate9234 linear infinite;
+}
+
+@keyframes rotate9234 {
+  to {
+    --angle: 360deg;
+  }
+}
+
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.inputP:focus~label,
+input:valid~label {
+  transform: translateY(265%) scale(1);
+ 
+  padding: 0 .9em;
+  color: #f7efe5;
+}
+
+
+.cent3{
+ 
   display: flex;
   flex-direction: column;
-}
 
-.bannerInfor1img {
-  width: 725px;
-  height: 350px;
-}
-.bannerInfor2img {
-  width: 725px;
-  height: 350px;
+ 
 }
 
 
-/*------------------------  Banner DE AVALIAÇÃO - HOME ---------------------------------------*/
-.avaliacao{
-  width: 80%;
+.textoT{
+  font-family: 'Edu NSW ACT Foundation', cursive;
+  text-decoration: none;
+  color: #00AC7C;
+  font-size: 23px;
+  display: flex;
+  margin-top: -10%;
+ 
+
+}
+.textoT:hover{
+  color: #29da19;
 }
 
-.todasAvaliacao{
-  padding: 4%;
+
+
+
+
+
+button {
+ 
+  margin-top: 10%;
+  margin-right: 28%;
+  font-size: 18px;
+  color: #56b98bb0;
+  font-family: inherit;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
 }
-.infoUsuario{
-  margin: 0 auto;
-  width: 90%;
-  padding: 2%;
-  margin-top: 3%;
-  font-size: 0.8em;
+
+button:focus,
+button:hover {
+  color: rgba(14, 179, 8, 0.719);
 }
-.infoUsuario:hover{
-  scale: 1.1;
-}
-.tituloAvaliacao{
-  margin-left: 26%;
-}
-.modelo{
-  display: none;
-}
-.bannerfixo1{
+
+button:focus:after,
+button:hover:after {
   width: 100%;
-  height: 400px;
+  left: 0%;
 }
-.bannerfixo2{
-  margin-top: 5% ;
-  width: 60%;
-  height: 200px;
+
+button:after {
+  content: "";
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background-color: rgba(14, 179, 8, 0.719);
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
 }
-.task{
-  width: 85%;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
 }
